# Advent-of-Code-2020

./: .editorconfig  .gitignore  new.sh
1/: makefile
day1/: Main.hs  day1.cabal
day2/: LICENSE  Main.hs  day2.cabal  hie.yaml
day3/: Main.hs  day3.cabal  hie.yaml
day4/: Main.hs  day4.cabal  hie.yaml
day5/: Main.hs  day5.cabal  hie.yaml
day6/: Main.hs  day6.cabal  hie.yaml
day7/: day7.cabal
day7/src/: Main.hs
day8/: LICENSE  day8.cabal
day8/src/: Main.hs
day9/: day9.cabal  stack.yaml
day9/src/: Main.hs
