name:                day7
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nzbr/day7#readme
license:             BSD3
license-file:        LICENSE
author:              nzbr
maintainer:
copyright:           2020 nzbr
category:            aoc2020
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day7
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , regex-tdfa >= 1.3.1.0
                     , hashmap >= 1.3.3
